# typestates-comparison

./: CHANGELOG.md  Cargo.toml  Makefile  README.md  release.toml
.github/workflows/: rust.yml
src/: individual_types.rs  lib.rs  phantom_types.rs  real_types.rs  typestate_crate.rs
