[package]
name = "typestates"
version = "0.3.1"
authors = ["Federico Stra <stra.federico@gmail.com>"]
description = "Comparison of different implementations of typestates"
license = "MIT" # https://spdx.org/licenses/
repository = "https://github.com/FedericoStra/typestates"
categories = [] # https://crates.io/category_slugs
keywords = ["typestate"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]
all-features = true
