[package]
name = "typestates-comparison"
version = "0.5.1"
authors = ["Federico Stra <stra.federico@gmail.com>"]
description = "Comparison of different implementations of typestates"
license = "MIT" # https://spdx.org/licenses/
repository = "https://github.com/FedericoStra/typestates-comparison"
categories = [] # https://crates.io/category_slugs
keywords = ["typestate"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
typestate = "0.8.0"

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]
all-features = true
